--- a/src/main/resources/fxml/TelaPrincipal.fxml
+++ b/src/main/resources/fxml/TelaPrincipal.fxml
@@ -156,6 +156,12 @@
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font></Label>
+                        <ComboBox fx:id="cbMatrizCurricular" layoutX="243.0" layoutY="60.0" onAction="#carregarSugestoesDaMatriz" prefHeight="25.0" prefWidth="399.0" />
+                        <Label layoutX="243.0" layoutY="42.0" prefHeight="17.0" prefWidth="106.0" text="Matriz curricular">
+                           <font>
+                              <Font name="Linux Biolinum G Regular" size="14.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
